[project]
name = "ctf"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "capstone>=5.0.6",
    "gmpy2>=2.2.1",
    "pillow>=11.3.0",
    "pwntools>=4.15.0",
    "pycryptodome>=3.23.0",
    "sympy>=1.14.0",
    "z3-solver>=4.15.3.0",
]

[tool.basedpyright]
reportMissingTypeStubs = false
reportWildcardImportFromLibrary = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportAny = false
